# colevent

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  colevent.pc.in  configure  configure.ac  default.nix
config/: config.h.in
src/: Makefile.am  Makefile.in  colevent_constants.h  colevent_kinematics.cc  colevent_kinematics.h  constants.h  kinematics.cc  kinematics.h  test_parse_lhco.cc  test_parse_lhef.cc  test_render_lhco.cc  test_render_lhef.cc
src/lhco/: event.cc  event.h  lhco.cc  lhco.h  object.cc  object.h  parser.cc  parser.h  particle.cc  particle.h
src/lhef/: event.cc  event.h  lhef.cc  lhef.h  parser.cc  parser.h  particle.cc  particle.h
